fixed learn more button and made header text a jumbotron. Overflow is now auto or scaled

--- a/css/KB.css
+++ b/css/KB.css
@@ -239,7 +239,7 @@ aside {
 /*************************/
 
 /******** BEGIN HEADER *********/
-header {
+header{
     position: relative;
     width: 100%;
     min-height: auto;
@@ -254,7 +254,9 @@ header {
     
     transition: background 1.5s linear;
     overflow: auto;
+    resize: both;
 }
+
 
 
 header .header-content {
@@ -313,25 +315,25 @@ header .header-content .header-content-inner p {
 
 
 #banner-text {
-    padding-top: 18%;
+    padding-top: 12%;
+    padding-right:3%;
     font-size: 45px;
     text-transform: none;
     font-weight: 400;
     line-height: 130%; 
-    margin-right: 0;
     text-align: right;    
 }
 
 #banner-text-small {
     font-size: 24px;
-    margin-right: 0;
+    padding-right: 3%;
     text-align: right;
-    max-width: 90%;
 }
 
 .learn-more {
     font-size: 24px;
     padding-bottom: 15%;
+    margin-right: 3%;
     font-weight: 700;
     margin-top: 20px;
 }
